enable_language(C ASM)
add_library(ApfsLib
	Aes.cpp
	Aes.h
	AesXts.cpp
	AesXts.h
	ApfsContainer.cpp
	ApfsContainer.h
	ApfsDir.cpp
	ApfsDir.h
	ApfsNodeMapper.cpp
	ApfsNodeMapper.h
	ApfsNodeMapperBTree.cpp
	ApfsNodeMapperBTree.h
	ApfsVolume.cpp
	ApfsVolume.h
	BlockDumper.cpp
	BlockDumper.h
	BTree.cpp
	BTree.h
	Crc32.cpp
	Crc32.h
	Crypto.cpp
	Crypto.h
	Decmpfs.cpp
	Decmpfs.h
	Device.cpp
	Device.h
	DeviceDMG.cpp
	DeviceDMG.h
	DeviceLinux.cpp
	DeviceLinux.h
	DeviceMac.cpp
	DeviceMac.h
	DeviceWinFile.cpp
	DeviceWinFile.h
	DeviceWinPhys.cpp
	DeviceWinPhys.h
	DiskStruct.h
	Endian.h
	FastCompression.h
	Global.h
	GptPartitionMap.cpp
	GptPartitionMap.h
	Inflate.cpp
	Inflate.h
	KeyMgmt.cpp
	KeyMgmt.h
	Sha256.cpp
	Sha256.h
	Util.cpp
	Util.h
	lzvn_decode.s)
