add_library(ApfsLib
	Aes.cpp
	Aes.h
	AesXts.cpp
	AesXts.h
	ApfsContainer.cpp
	ApfsContainer.h
	ApfsDir.cpp
	ApfsDir.h
	ApfsNodeMapper.cpp
	ApfsNodeMapper.h
	ApfsNodeMapperBTree.cpp
	ApfsNodeMapperBTree.h
	ApfsVolume.cpp
	ApfsVolume.h
	BlockDumper.cpp
	BlockDumper.h
	BTree.cpp
	BTree.h
	CheckPointMap.cpp
	CheckPointMap.h
	Crc32.cpp
	Crc32.h
	Crypto.cpp
	Crypto.h
	Decmpfs.cpp
	Decmpfs.h
	Des.cpp
	Des.h
	Device.cpp
	Device.h
	DeviceDMG.cpp
	DeviceDMG.h
	DeviceLinux.cpp
	DeviceLinux.h
	DeviceMac.cpp
	DeviceMac.h
	DeviceWinFile.cpp
	DeviceWinFile.h
	DeviceWinPhys.cpp
	DeviceWinPhys.h
	DiskStruct.h
	Endian.h
	Global.h
	GptPartitionMap.cpp
	GptPartitionMap.h
	KeyMgmt.cpp
	KeyMgmt.h
	PList.cpp
	PList.h
	Sha1.cpp
	Sha1.h
	Sha256.cpp
	Sha256.h
	TripleDes.cpp
	TripleDes.h
	Util.cpp
	Util.h
	Unicode.cpp
	Unicode.h)
