# If someone knows a better way for this, please tell me ... ;-)
if(APPLE)
include_directories(/usr/local/include/osxfuse/)
link_directories(/usr/local/lib/)
endif()

add_executable(apfs-fuse ApfsFuse.cpp)
if(APPLE)
target_link_libraries(apfs-fuse ApfsLib osxfuse z bz2 lzfse)
else()
target_link_libraries(apfs-fuse ApfsLib fuse z bz2 lzfse)
endif()
target_compile_definitions(apfs-fuse PRIVATE _FILE_OFFSET_BITS=64)
